--- a/quiz_game_page.html
+++ b/quiz_game_page.html
@@ -41,13 +41,13 @@
             <h3>
                 1st Number
             </h3>
-            <input id="number_1" type="number" placeholder="Type your 1st number here">
+            <input id="number_1" type="number" placeholder="Type your 1st number here" class="style">
             <br>
             <br>
             <h3>
                 2nd Number
             </h3>
-            <input id="number_2" type="number" placeholder="Type your 2nd number here">
+            <input id="number_2" type="number" placeholder="Type your 2nd number here" class="style">
             <br>
             <br>
             <button onclick="send()" class="btn btn-success" id="send_button">
